# LingmoUI

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile  LingmoUIConfig.cmake.in  MANIFEST.in  README.md  THIRD_PARTY_COPYING_INFO  pyproject.toml  setup.py
.cmake/CheckForQtVersion/: CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: Auto CI Test Build.yml  build.yml  doxygen-gh-pages.yml
Compatible/: CMakeLists.txt  iconthemeprovider.h  lingmoui.cpp  lingmoui.h  managedtexturenode.cpp  managedtexturenode.h  newiconitem.cpp  qqmlsortfilterproxymodel.cpp  thememanager.cpp  thememanager.h  wheelhandler.h
Compatible/Controls/: AboutDialog.qml  ActionTextField.qml  BusyIndicator.qml  DesktopMenu.qml  Dialog.qml  PopupTips.qml  RoundImageButton.qml  RoundedRect.qml  TabBar.qml  TabButton.qml  TabCloseButton.qml  TabView.qml  TextField.qml  Theme.qml  Toast.qml  Window.qml  qmldir
Compatible/desktop/: menupopupwindow.cpp  menupopupwindow.h
Compatible/lingmo-style/: BorderButton.qml  Button.qml  CMakeLists.txt  CheckBox.qml  CheckIndicator.qml  ComboBox.qml  Dialog.qml  DialogButtonBox.qml  Frame.qml  Label.qml  Menu.qml  MenuItem.qml  MenuSeparator.qml  Page.qml  ProgressBar.qml  RadioButton.qml  RadioDelegate.qml  RadioIndicator.qml  ScrollBar.qml  Slider.qml  Switch.qml  SwitchIndicator.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextField.qml  ToolTip.qml
LingmoStyle/: ApplicationWindow.qml  BusyIndicator.qml  Button.qml  CMakeLists.txt  CheckBox.qml  CheckDelegate.qml  ComboBox.qml  Dial.qml  Dialog.qml  DialogButtonBox.qml  Drawer.qml  Menu.qml  ToolButton.qml
LingmoUIPy/: __init__.py
conf/: version
debian/: changelog  control  rules
example/: CMakeLists.txt  version_exe.rc.in
example/qml/: main.qml
example/qml/global/: SidebarItems.qml
example/qml/pages/: Buttons.qml  HotkeyPicker.qml  TabView.qml
example/qml/windows/: MainPage.qml  MainWindow.qml  ShortcutWindow.qml
example/src/: main.cpp
src/: CMakeLists.txt  LingmoAccentColor.cpp  LingmoAccentColor.h  LingmoApp.cpp  LingmoApp.h  LingmoColor.cpp  LingmoColor.h  LingmoDefines.h  LingmoFrameless.cpp  LingmoFrameless.h  LingmoHotkey.cpp  LingmoHotkey.h  LingmoIconDef.h  LingmoRectangle.cpp  LingmoRectangle.h  LingmoTextStyle.cpp  LingmoTextStyle.h  LingmoTheme.cpp  LingmoTheme.h  LingmoTools.cpp  LingmoTools.h  cuteui.h  iconthemeprovider.cpp  lingmoui.cpp  lingmoui.h  lingmoui.qrc  newiconitem.cpp  newiconitem.h  qqmlsortfilterproxymodel.cpp  qqmlsortfilterproxymodel.h  thememanager.cpp  thememanager.h  version  wheelhandler.cpp  wheelhandler.h
src/Controls/: AboutDialog.qml  LingmoAcrylic.qml  LingmoAppBar.qml  LingmoBadge.qml  LingmoButton.qml  LingmoCheckBox.qml  LingmoClip.qml  LingmoControl.qml  LingmoControlBackground.qml  LingmoCustomDialog.qml  LingmoDelayButton.qml  LingmoDivider.qml  LingmoDropDownBox.qml  LingmoFilledButton.qml  LingmoFilledIconButton.qml  LingmoFocusRectangle.qml  LingmoFrame.qml  LingmoHotkeyPicker.qml  LingmoIcon.qml  LingmoIconButton.qml  LingmoImageButton.qml  LingmoInfoBar.qml  LingmoLoader.qml  LingmoLoadingButton.qml  LingmoMenu.qml  LingmoMenuItem.qml  LingmoNavigationView.qml  LingmoObject.qml  LingmoPage.qml  LingmoPanelItem.qml  LingmoPanelItemEmpty.qml  LingmoPanelItemExpander.qml  LingmoPanelItemHeader.qml  LingmoPanelItemSeparator.qml  LingmoPopup.qml  LingmoProgressButton.qml  LingmoProgressRing.qml  LingmoRouter.qml  LingmoScrollBar.qml  LingmoScrollablePage.qml  (+13 more)
src/Controls_Old/: DesktopMenu.qml  RoundedRect.qml  TabButton.qml  TabView.qml  TextField.qml  Theme.qml
src/GraphicalEffects/: BrightnessContrast.qml  CMakeLists.txt  ColorOverlay.qml  Colorize.qml  ConicalGradient.qml  Desaturate.qml  Displace.qml  DropShadow.qml  FastBlur.qml  FastGlow.qml  GammaAdjust.qml  Glow.qml  HueSaturation.qml  LevelAdjust.qml  LinearGradient.qml  OpacityMask.qml  RadialGradient.qml  RectangularGlow.qml  ThresholdMask.qml  qgfxsourceproxy_p.h
src/controls/: AboutDialog.qml  ActionTextField.qml  BusyIndicator.qml  DesktopMenu.qml  Dialog.qml  InfoDialog.qml  RoundImageButton-close.qml  RoundImageButton-max.qml  RoundImageButton-mini.qml  RoundImageButton.qml  TabBar.qml  TabCloseButton.qml  TabView.qml  Theme.qml  Toast.qml  Window.qml  qmldir
src/desktop/: menupopupwindow.cpp  menupopupwindow.h  platformmenu.cpp  platformmenu.h  platformmenuitem.cpp  platformmenuitem.h
src/fish-style/: Button.qml  CheckBox.qml  RadioButton.qml  Slider.qml  TabBar.qml  TabButton.qml
src/lingmo-style/: ApplicationWindow.qml  BorderButton.qml  Button.qml  CMakeLists.txt  CheckBox.qml  CheckIndicator.qml  ComboBox.qml  Dialog.qml  DialogButtonBox.qml  Frame.qml  Label.qml  Menu.qml  MenuItem.qml  MenuSeparator.qml  Page.qml  ProgressBar.qml  RadioButton.qml  RadioDelegate.qml  RadioIndicator.qml  ScrollBar.qml  Slider.qml  Switch.qml  SwitchIndicator.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextField.qml  ToolTip.qml
